modify padding on category list; fixed text align on categories

--- a/page.css
+++ b/page.css
@@ -77,6 +77,7 @@ img#user-image {
   border: 2px solid black;
   outline: none;
 }
+
 #search-bar:focus {
 }
 
@@ -94,6 +95,10 @@ img#user-image {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.section-title {
+  font-size: 300%;
 }
 
 .list-section {
@@ -114,6 +119,10 @@ img#user-image {
   cursor: pointer;
 }
 
+.title {
+  text-align: center;
+}
+
 .category:hover > .title {
   color: var(--main-color);
 }
@@ -123,6 +132,8 @@ img#user-image {
 }
 
 .category-thumbnail {
+  margin: 1em;
+  padding: 1em;
   width: 150px;
   height: 150px;
   object-fit: contain;
